<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">YouArrive</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="title_activity_marker">Marcador</string>
    <string name="activity_main">Actividad Principal</string>
    <string name="activity_search">Actividad Busqueda</string>
    <string name="mapsActivity_hint_search">¿Donde quieres despertar?</string>
    <string name="searchActivity_back_button">Boton de retroceso</string>
    <string name="recyclerView_address">Direccion</string>
    <string name="recyclerView_area">Ciudad</string>
    <string name="recyclerView_country">Pais</string>
    <string name="recyclerView_manual_selection_text">Establecer la ubicación en el mapa</string>
    <string name="markerActivity_ready">Listo</string>
    <string name="markerActivity_center_marker">Marcador del Centro</string>
    <string name="markerActivity_metres">500 Metros</string>
    <string name="awaitAlarmActivity_see_route">VER LA RUTA</string>
    <string name="awaitAlarmActivity_change_range">CAMBIAR RANGO</string>
    <string name="awaitAlarmActivity_alarm_active">ALARMA ACTIVA</string>
    <string name="awaitAlarmActivity_cancel">CANCELAR</string>
    <string name="awaitAlarmActivity_you_arrived">HAS LLEGADO</string>
    <string name="startDialog_first_advice">Si su dispositivo cuenta con un modo de <b>AHORRO DE ENERGÍA</b>, y el mismo se encuentra activo, por favor desactive lo mientras las alarmas estén activadas.</string>
    <string name="item_icono_descriptor">item_icono</string>
    <string name="search_here">Busque aqui</string>
    <string name="search_google">search_google</string>
    <string name="search_settings">search_settings</string>
    <string name="title_activity_first_confirmation">Map</string>
    <string name="select_travel_button">Seleccionar Recorrido</string>
    <string name="ubicacion_actual">Ubicacion actual</string>
    <string name="no_route_select">No seleccionar recorrido</string>
    <string name="add_home">Añadir casa</string>
    <string name="manual_select">Seleccionar Manulamente</string>
    <string name="set_home">Establezca su casa</string>
    <string name="geocode_error_message">No se pudo conectar con el servicio, seleccione la ubicacion manualmente.</string>
    <string name="confirm">Confirmar</string>
    <string name="exit_text">¿Seguro que desea salir?</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="welcome_message">¡Bienvenido a YouArrive!</string>
    <string name="dont_show_again">No volver a mostrar</string>
    <string name="save">Guardar</string>
    <string name="delete">Borrar</string>
    <string name="title_activity_final_confirmation">FinalConfirmation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarmtone_title">Seleccionar tono de alarma</string>
    <string name="volume_title">Volumen de alarma</string>
    <string name="safezone_title">Seleccionar area segura</string>
    <string name="volume_percent_default">50%</string>
    <string name="safezone_fourth_option_metres">500</string>
    <string name="safezone_third_option_metres">250</string>
    <string name="safezone_second_option_metres">100</string>
    <string name="safezone_first_option_metres">0</string>
    <string name="safezone_fourth_option_imperial" tools:ignore="TypographyFractions">1/3</string>
    <string name="safezone_third_option_imperial">1/6</string>
    <string name="safezone_second_option_imperial">1/15</string>
    <string name="safezone_first_option_imperial">0</string>
    <string name="your_location">Tu ubicacion</string>
    <string name="default_alarm_text">Alarma por defecto</string>
    <string name="select_file_text">Seleccionar archivo</string>
    <string name="all_ready_await_text">¡Todo Listo!</string>
    <string name="default_next_alarm_time_text">Aprox. ? minutos para la proxima alarma</string>
    <string name="edit">Editar</string>
    <string name="look_alarms">Ver alarmas</string>
    <string name="cancel">Cancelar</string>
    <string name="title_activity_set_alarm">SetAlarmMap</string>
    <string name="default_alarm_count">0</string>
    <string name="select_tone_dialog_title">Seleccionar tono</string>
    <string name="default_hour">00:00</string>
    <string name="default_day_zone">AM</string>
    <string name="stop_alarm_help_text">Desliza para desactivar la alarma</string>
    <string name="you_arrive_text">¡Ya Llegaste!</string>
    <string name="go_back">Volver</string>
    <string name="cancel_route_warn">¿Seguro que desea retroceder?</string>
    <string name="map_configuration_title">Configuración</string>
    <string name="actual_version">Version 1.0</string>
    <string name="language">Idioma</string>
    <string name="metric_system">Sistema metrico</string>
    <string name="metres">Metros</string>
    <string name="miles">Millas</string>
    <string name="travel_type_title">Tipo de viaje</string>
    <string name="travel_mode_title">Modo de viaje</string>
    <string name="train">Tren</string>
    <string name="bus">Autobus</string>
    <string name="metro">Metro</string>
    <string name="monorail">Monorail</string>
    <string name="walk">Camina</string>
    <string name="drive">Conduce</string>
    <string name="minutes">minutos</string>
    <string name="to">hasta</string>
</resources>
